--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 
    <nav>
-       <a href="Tanmoy.html">Home</a>
+       <a href="index.html">Home</a>
        <a href="work.html">Work</a>
        <a href="About.html">About</a>
        <a href="Contact.html" target="_blank" rel="noopener noreferrer">Contact us</a>
