--- a/About.html
+++ b/About.html
@@ -97,7 +97,7 @@ footer{
     </header> 
     
     <nav>
-        <a href="Tanmoy.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="work.html">Work</a>
         <a href="About.html">About</a>
         <a href="Contact.html" target="_blank" rel="noopener noreferrer">Contact us</a>
