--- a/work.html
+++ b/work.html
@@ -62,7 +62,11 @@ h2 span{
   overflow: hidden;
   border-radius: 5px;
 }
-
+.carousel-cell img{
+    height: 430px; width: 440px; 
+}
+    
+    
 @media screen and (max-width: 450px) {
     nav a{
         padding: 8px;
@@ -77,9 +81,7 @@ h2 span{
     }
 }
 
-.carousel-cell img{
-    height: 430px; width: 440px; object-fit: cover;
-}
+
 
 .space{
     height: 5rem;
