--- a/work.html
+++ b/work.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Work</title>
+    <title>Document</title>
     <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
 
@@ -63,24 +63,21 @@ h2 span{
   border-radius: 5px;
 }
 .carousel-cell img{
-    height: 430px; width: 440px; 
+    height: 430px; width: 440px; object-fit: cover;
 }
-    
-    
 @media screen and (max-width: 450px) {
     nav a{
         padding: 8px;
     }
     .carousel-cell img{
-        width: 350px;
-        height: 340px;
+        width: 100%;
+        height: 340px; 
     }
     .carousel-cell {
         width: 350px;
         height: 340px;
     }
 }
-
 
 
 .space{
@@ -100,7 +97,7 @@ footer{
    </header> 
    
    <nav>
-       <a href="index.html">Home</a>
+       <a href="Tanmoy.html">Home</a>
        <a href="work.html">Work</a>
        <a href="About.html">About</a>
        <a href="Contact.html" target="_blank" rel="noopener noreferrer">Contact us</a>
