--- a/Contact.html
+++ b/Contact.html
@@ -82,7 +82,7 @@
                     <option value="Other" >Other, specify below</option>
 
                 </select>
-                <textarea name="magic" id="txtarea" cols="150" rows="1.5"></textarea>
+                <textarea name="Other_reason" id="txtarea" cols="150" rows="1.5"></textarea>
             </p>
             <p>
                 Message: <br><textarea name="message" id="message" cols="150" rows="7" required placeholder="Enter your message"></textarea>
